[gd_scene load_steps=7 format=3 uid="uid://s7tof7iy1c2k"]

[ext_resource type="PackedScene" uid="uid://dhgq4bfmiwl1" path="res://enemies/blue_ghost.tscn" id="1_fe6xj"]
[ext_resource type="Texture2D" uid="uid://2tiea5d4uo2u" path="res://arts/Red Ghost.png" id="2_k2hwp"]
[ext_resource type="Script" path="res://enemies/red_ghost.gd" id="2_l55uo"]
[ext_resource type="Texture2D" uid="uid://dan8gry2a42st" path="res://arts/LifeBarMiniUnder.png" id="4_ca6h5"]
[ext_resource type="Texture2D" uid="uid://chcj4k0xkkeky" path="res://arts/LifeBarMiniProgress.png" id="5_e046d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_70tah"]
radius = 50.0

[node name="redGhost" instance=ExtResource("1_fe6xj")]
script = ExtResource("2_l55uo")
maxHealth = 2

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_k2hwp")

[node name="playerDetection" type="Area2D" parent="." index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetection" index="0"]
shape = SubResource("CircleShape2D_70tah")

[node name="healthBar" type="TextureProgressBar" parent="." index="7"]
offset_left = -9.0
offset_top = -15.0
offset_right = 31.0
offset_bottom = 25.0
value = 100.0
texture_under = ExtResource("4_ca6h5")
texture_progress = ExtResource("5_e046d")

[connection signal="body_entered" from="playerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="playerDetection" to="." method="_on_player_detection_body_exited"]
